# bot-info-uno

./: .gitignore  Cargo.toml  Dockerfile  Pipfile  README  README.md  Secrets.dev.toml  Shuttle.dev.toml  Shuttle.toml  bot.py  deploy_docker.sh  messages.py  requirements.txt  test.py
.github/workflows/: deploy.yaml  deploy.yml
assets/: calendario_academico.json  calendario_feriados.json  comunidades_it.json  links.json  mails_escuelas.json
assets/messages/: calendario-academico.txt  calendario_academico.txt  help.txt
src/: accepted_commands.py  bot.rs  command.rs  command_urls.py  handlers.py  helpers.py  main.rs  messages.py  setup.py
src/commands/: calendario_academico.rs  comunidades_it.rs  get_siu_info.rs  hacer_algo.rs  links_utiles.rs  mails_de_escuela.rs  mod.rs  roadmap.rs
src/hooks/: left_chat_member.rs  mod.rs  new_chat_member.rs
src/models/: errors.rs  link.rs  mails_de_escuelas.rs  mod.rs
