[package]
name = "uno-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shuttle-runtime = "0.40.0"
shuttle-secrets = "0.40.0"
teloxide = { version = "0.12.2", features = ["teloxide-macros", "macros"] }
thiserror = "1.0.56"
tokio = "1"
tracing = { version = "0.1.40", features = ["log"] }
